updated for MP 1.2.3 - added feature where the audio source can be specified for new channels that are created for digital and satellite.

--- a/SchedulesDirectPluginTVE3/SchedulesDirectPluginTVE3.csproj
+++ b/SchedulesDirectPluginTVE3/SchedulesDirectPluginTVE3.csproj
@@ -31,6 +31,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SourceAnalysisOverrideSettingsFile>C:\Users\geoff\AppData\Roaming\ICSharpCode/SharpDevelop4\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
